# wayfinder

./: .gitignore  DESIGN.md  README.md  pyproject.toml
ideas/: 01-agent-native-browser.md  02-capability-discovery.md  03-sandboxed-build-loop.md  README.md
tests/: conftest.py  test_base.py  test_breaker.py  test_greenhouse_matcher.py  test_http_wayfinder.py  test_policy.py  test_walker.py
tests/browser/: conftest.py  test_diff.py  test_errors_and_credentials.py  test_identity.py  test_models.py  test_oauth.py  test_observer_js.py  test_session_actions.py  test_session_navigation.py  test_session_storage.py  test_session_wait_and_extract.py  test_warden_client.py
tests/browser/fixtures/: dynamic.html  form.html  index.html  lazy_form.html  list.html  login.html  modal.html  new_tab.html
wayfinder/: __init__.py  base.py  breaker.py  events.py  http_client.py  policy.py  walker.py
wayfinder/browser/: AGENTS.md  __init__.py  credentials.py  diff.py  errors.py  executor.py  identity.py  models.py  oauth.py  observer.js  observer.py  session.py
wayfinder/walkers/: __init__.py  greenhouse_plain.py  greenhouse_submitter.py  http.py
