[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder"
version = "0.1.0"
description = "Resilient HTTP walker with per-host circuit breakers, retry-after handling, and a supervised event stream"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Doug Allpress" }]

dependencies = [
    "httpx>=0.27",
    "cryptography>=42.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.42"]
dev = ["pytest>=8.1", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10", "playwright>=1.42"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wayfinder*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
